...
              {errorMessage}
            </Alert>
          </View>
        )}

        <TextInput
          testID="username-input"
          style={styles.input}
          placeholder={t('login.username')}
          placeholderTextColor="#aaa"
          value={username}
          onChangeText={handleUsernameChange}
          autoCapitalize="none"
          autoCorrect={false}
          editable={!loading}
        />

        <TextInput
          testID="password-input"
          style={styles.input}
          placeholder={t('login.password')}
          placeholderTextColor="#aaa"
          value={password}
          onChangeText={handlePasswordChange}
          secureTextEntry
...
